fix alignment of button group and change topbar to black

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,7 +143,7 @@ span{
 }
 
 footer{
-  padding: 10%;
+  padding: 3%;
 }
 
 .paginate{
