--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1403,7 +1403,7 @@ $f-dropdown-border-width: 2px;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: $oil;
+$topbar-bg-color: black;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
